# Singleton_DP

./: CMakeLists.txt  README.md  appLog.txt
include/: BaseSingleton.h  Logger.h  Singleton.h
lib/: Singleton_lib.cpp  logger_lib.cpp
src/: main.cpp
